--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
   <h1>Hello World</h1>
   <P>Hello Yashowardhan</P>
   <p>Demo Js Added</p>
+  <P>This Paragraph Should Be Deleted</P>
 </body>
 </html>
