Modified index.html at slave-branch

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <P>This Paragraph Should Be Deleted</P>
 
   <p>Slave Branch</p>
-  <p>Git Merge Conflicts</p>
+  <p>Git Merge Conflicts!!!This line changed..change this line!!!</p>
 </body>
 </html>
