--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 
   <p>Slave Branch</p>
   <p>Git Merge Conflicts!!!This line changed..change this line!!!</p>
+  <p>git stash</p>
 </body>
 </html>
